# perl-embed-autotools

./: AUTHORS  Makefile.PL  README  README.md  configure.ac
m4/: ax_perl_embed_ext.m4  ax_perl_embed_ext.m4.lock~  ax_perl_ext.m4
src/: Makefile  Makefile.am  Makefile.in  myperlembed  myperlembed.c
src/.deps/: myperlembed-myperlembed.Po  myperlembed.Po
